RESOLVED FIXED72091
Disabling assertions breaks the debug build
https://bugs.webkit.org/show_bug.cgi?id=72091
Summary Disabling assertions breaks the debug build
mitz
Reported 2011-11-10 22:48:00 PST
Disabling assertions breaks the debug build
Attachments
Fix the debug build with assertions disabled (9.42 KB, patch)
2011-11-10 22:55 PST, mitz
ggaren: review+
mitz
Comment 1 2011-11-10 22:55:37 PST
Created attachment 114630 [details] Fix the debug build with assertions disabled
Geoffrey Garen
Comment 2 2011-11-10 23:07:48 PST
Comment on attachment 114630 [details] Fix the debug build with assertions disabled r=me
mitz
Comment 3 2011-11-10 23:09:14 PST
Note You need to log in before you can comment on or make changes to this bug.