Disabling assertions breaks the debug build https://bugs.webkit.org/show_bug.cgi?id=72091

Reviewed by Geoff Garen.

Source/JavaScriptCore:

* dfg/DFGNode.h: Made hasIdentifier() available when assertions are
disabled. It is used in Graph::dump().
* runtime/JSObject.cpp:
(JSC::JSObject::visitChildren): Update m_isCheckingForDefaultMarkViolation
only if assertions are enabled.
* wtf/Deque.h:
(WTF::::checkIndexValidity): Changed ASSERT to ASSERT_UNUSED.
* wtf/ThreadRestrictionVerifier.h:
(WTF::ThreadRestrictionVerifier::setShared): Guarded the definition of
a local variable that is only used in an assertion.

Source/WebCore:

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::didDecodeProperties): Guarded the definition of local variables that are
only used in an assertion correctly.
* platform/graphics/gpu/TilingData.h: Changed ASSERT to ASSERT_UNUSED.
(WebCore::TilingData::assertTile):
* rendering/RenderInline.cpp:
(WebCore::RenderInline::willBeDestroyed): Guarded the definition of a local variable that is
only used in an assertion correctly.
* rendering/svg/RenderSVGResourceClipper.cpp:
(WebCore::RenderSVGResourceClipper::applyResource): Changed ASSERT to ASSERT_UNUSED.
* rendering/svg/RenderSVGResourceFilter.cpp:
(WebCore::RenderSVGResourceFilter::applyResource): Changed ASSERT to ASSERT_UNUSED.
(WebCore::RenderSVGResourceFilter::postApplyResource): Changed ASSERT to ASSERT_UNUSED.
* rendering/svg/RenderSVGResourceMasker.cpp:
(WebCore::RenderSVGResourceMasker::applyResource): Changed ASSERT to ASSERT_UNUSED.



Canonical link: https://commits.webkit.org/88489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99929 268f45cc-cd09-0410-ab3c-d52691b4dbfc