Source/WebCore/rendering/RenderInline.cpp
@@ -55,7 +55,7 @@ RenderInline::RenderInline(Node* node)
 
 void RenderInline::willBeDestroyed()
 {
-#ifndef NDEBUG
+#if !ASSERT_DISABLED
     // Make sure we do not retain "this" in the continuation outline table map of our containing blocks.
     if (parent() && style()->visibility() == VISIBLE && hasOutline()) {
         bool containingBlockPaintsContinuationOutline = continuation() || isInlineElementContinuation();
